# wallpaper-engine-kde-plugin

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DEBUG.md  OLD-README.md  README.md  install.sh
src/: CMakeLists.txt  MouseGrabber.cpp  MouseGrabber.h  MouseGrabber.hpp  PluginInfo.cpp  PluginInfo.hpp  TTYSwitchMonitor.cpp  TTYSwitchMonitor.hpp  WPCommon.h  plugin.cpp  qmldir  viewModel.cpp  viewModel.h  wallpaperEngine.pro  weProjectLoader.cpp  weProjectLoader.h
src/backend/mpv/: .mpvbackend.cpp.swp  CMakeLists.txt  mpvbackend.cpp  mpvbackend.h
src/backend/mpv/viewer/: CMakeLists.txt  main.qml
src/backend/scene/: CMakeLists.txt  SceneViewer.cpp  SceneViewer.h
src/backend/scene/src/: GLVertice.cpp  GLVertice.h  GLWrapper.cpp  GLWrapper.h  SceneViewer.cpp  SceneViewer.h  WPJson.h  WPRender.cpp  WPRender.h  WPShaderManager.cpp  WPShaderManager.h  WPTextureCache.cpp  WPTextureCache.h  common.cpp  common.h  effect.cpp  effect.h  image.cpp  image.h  material.cpp  material.h  object.cpp  object.h  pkg.cpp  teximage.cpp  teximage.h  wallpaper.cpp  wallpaper.h
src/backend/scene/viewer/: glfwviewer.cpp  main.qml  qmlviewer.cpp
src/backend/scene/wpdoc/: scenejson.md  shader.md  ui_en-us.json
src/backend_mpv/: CMakeLists.txt  MpvBackend.cpp  MpvBackend.hpp  mpvbackend.h  qthelper.hpp
src/backend_mpv/standalone_viewer/: CMakeLists.txt  qmlviewer.cpp
src/backend_mpv/viewer/: CMakeLists.txt  main.qml  qmlviewer.cpp
src/backend_scene/: CMakeLists.txt  SceneBackend.cpp  SceneBackend.h  SceneBackend.hpp  SceneViewer.cpp  SceneViewer.h  glExtra.cpp  glExtra.hpp
src/backend_scene/include/vog/: sha1.hpp
src/backend_scene/qml_helper/: SceneBackend.cpp  SceneBackend.hpp  glExtra.cpp  glExtra.hpp
src/backend_scene/src/: CMakeLists.txt  Image.hpp  SceneBackend.cpp  SceneBackend.h  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.hpp  SpriteAnimation.hpp  WPCommon.hpp  WPJson.cpp  WPJson.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPParticleParser.cpp  WPParticleParser.hpp  WPPkgFs.cpp  WPPkgFs.hpp  WPPuppet.cpp  WPPuppet.hpp  WPSceneParser.cpp  WPShaderParser.cpp  WPShaderParser.hpp  WPShaderValueUpdater.cpp  WPShaderValueUpdater.hpp  WPSoundParser.cpp  WPSoundParser.hpp  WPTexImageParser.cpp  glExtra.cpp  glExtra.hpp
src/backend_scene/src/Audio/: CMakeLists.txt  SoundManager.cpp  miniaudio-wrapper.hpp
src/backend_scene/src/Core/: BlockingQueue.hpp  Core.hpp  Literals.hpp  Random.hpp
src/backend_scene/src/Fs/: CMakeLists.txt
src/backend_scene/src/Interface/: IGraphicManager.h  IParticleRawGener.h  ISceneParser.h  IShaderValueUpdater.h
src/backend_scene/src/Looper/: CMakeLists.txt  Looper.cpp
src/backend_scene/src/Particle/: CMakeLists.txt  ParticleEmitter.cpp  ParticleModify.cpp  ParticleModify.h  ParticleSystem.cpp  ParticleSystem.h  WPParticleRawGener.cpp
src/backend_scene/src/RenderGraph/: CMakeLists.txt  DependencyGraph.cpp  RenderGraph.cpp  TexNode.cpp
src/backend_scene/src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneImageEffectLayer.cpp  SceneIndexArray.cpp  SceneMaterial.h  SceneMesh.h  SceneNode.cpp  SceneShader.cpp  SceneShader.h  SceneVertexArray.cpp
src/backend_scene/src/Swapchain/: ExSwapchain.hpp  TripleSwapchain.hpp
src/backend_scene/src/Timer/: CMakeLists.txt  FrameTimer.cpp  ThreadTimer.cpp
src/backend_scene/src/Utils/: Algorism.cpp  Algorism.h  ArrayHelper.hpp  CMakeLists.txt  DynamicLibrary.cpp  DynamicLibrary.hpp  FpsCounter.cpp  FrameTimer.cpp  Logging.cpp  NoCopyMove.hpp  Platform.hpp  Sha.cpp  Sha.hpp  String.h  StringHelper.hpp
src/backend_scene/src/Vulkan/: CMakeLists.txt  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  Parameters.cpp  Shader.cpp  Shader_impl.hpp  StagingBuffer.cpp  Swapchain.cpp  TextureCache.cpp  vulkan_wrapper.cpp
src/backend_scene/src/VulkanRender/: CMakeLists.txt  CopyPass.cpp  CustomShaderPass.cpp  CustomShaderPass.hpp  FinPass.cpp  FinPass.hpp  PassCommon.hpp  PrePass.cpp  PrePass.hpp  Resource.hpp  SceneToRenderGraph.cpp  VulkanPass.hpp  VulkanRender.cpp
src/backend_scene/src/viewer/: CMakeLists.txt  glfwviewer.cpp  main.qml  pkg.qrc  qmlviewer.cpp
src/backend_scene/src/wallpaper/: CMakeLists.txt  Image.h  SceneToRenderGraph.cpp  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.h  WPPkgFs.cpp  WPSceneParser.cpp  WPSceneParser.h  WPShaderParser.cpp  WPShaderParser.h  WPShaderValueUpdater.cpp  WPTexImageParser.cpp  wallpaper.cpp  wallpaper.h
src/backend_scene/src/wpscene/: WPImageObject.cpp  WPImageObject.h  WPLightObject.cpp  WPLightObject.hpp  WPMaterial.h  WPParticleObject.cpp  WPParticleObject.h  WPScene.h  WPSoundObject.h  WPUniform.h
src/backend_scene/standalone_view/: CMakeLists.txt  arg.hpp  glfwviewer.cpp  main.qml  qmlviewer.cpp
src/backend_scene/wallpaper/: CMakeLists.txt  Handle.hpp  Image.h  Image.hpp  SceneToRenderGraph.cpp  SceneToRenderGraph.hpp  SceneWallpaper.cpp  SceneWallpaper.hpp  SceneWallpaperSurface.hpp  SpecTexs.h  SpecTexs.hpp  SpriteAnimation.h  Type.cpp  Type.h  Type.hpp  WPCommon.hpp  WPJson.cpp  WPJson.hpp  WPMdlParser.cpp  WPMdlParser.hpp  WPParticleParser.cpp  WPParticleParser.hpp  WPPkgFs.cpp  WPPkgFs.hpp  WPPuppet.cpp  WPPuppet.hpp  WPSceneParser.cpp  WPSceneParser.hpp  WPShaderParser.cpp  WPShaderParser.h  WPShaderParser.hpp  WPShaderValueUpdater.cpp  WPShaderValueUpdater.h  WPShaderValueUpdater.hpp  WPSoundParser.cpp  WPTexImageParser.cpp  WPTexImageParser.h  WPTexImageParser.hpp
src/backend_scene/wallpaper/Fs/: CBinaryStream.h  Fs.h  IBinaryStream.h  LimitedBinaryStream.h  PhysicalFs.h  VFS.h
src/backend_scene/wallpaper/Interface/: IGraphicManager.h  IImageParser.h  ISceneParser.h  IShaderValueUpdater.h
src/backend_scene/wallpaper/Looper/: Looper.cpp
src/backend_scene/wallpaper/Particle/: Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleModify.h  ParticleSystem.cpp  WPParticleRawGener.cpp
src/backend_scene/wallpaper/RenderGraph/: CMakeLists.txt  PassNode.cpp  RenderGraph.cpp
src/backend_scene/wallpaper/Scene/: Scene.cpp  (+14 more)
src/backend_scene/wpdoc/: shader.md  texture.md  urls.md
(+422 files in other folders)
